--- a/main.css
+++ b/main.css
@@ -6,7 +6,10 @@
 }
 
 body{
-    background: #444;
+    background-image: url("imagens/wallpape.jpg");
+    background-position: center;
+    background-position-x: center;
+    background-position-y:center ;
 }
 /*==================================================*/
 h1{
@@ -15,9 +18,12 @@ h1{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
-
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 0px 2px;
   filter: drop-shadow(0px 0px 2px black);
  }
+
+
 
 p{
     color: white;
@@ -25,9 +31,8 @@ p{
 } 
 
 .efx{
-    backdrop-filter: blur(10px);
-    width: 900px;
-    box-shadow: 0px 0px 2px;
+
+
 }
 
 /*==================================================*/
@@ -73,34 +78,7 @@ form{
 
 
 
-button{
-    color: white;
-    background: dodgerblue;
-    border: none;
-    width: 80px;
-    height: 26px;
-    cursor: pointer;
-    box-shadow: 1px 0px 2px;
-    bottom: unset;
-    margin-top: 20px;
-    margin: 5px;
-    
-}
-
-button:hover{
-    color: white;
-   background: skyblue;
-
-}
 /*==================================================*/
-.social{
-   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    letter-spacing: 10px;   
-    margin-top: 15px;
-}
-
 .social :hover{
     filter: drop-shadow(0px 1px 2px);
 }
